fixed multi-file copy in dockerfile