@@ -1,10 +1,10 @@
 FROM gradle:7.3-jdk11-alpine AS build
 COPY --chown=gradle:gradle . /home/gradle/src
 WORKDIR /home/gradle/src
-RUN gradle build --no-daemon
+RUN ./gradlew build --no-daemon
 
 FROM openjdk:11-jre-slim
 EXPOSE 8080
 RUN mkdir /app
-COPY --from=build /home/gradle/src/build/libs/api-0.1.0-SNAPSHOT.jar /app/spring-boot-application.jar
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/app/spring-boot-application.jar"]
+COPY --from=build /home/gradle/src/build/libs/cluster-api-SNAPSHOT.jar /app/cluster-api.jar
+ENTRYPOINT ["java", "-jar", "/app/cluster-api.jar"]
